--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,8 @@
   margin-bottom: 26px;
   height: 380px;
   margin-left: 26px;
-  
+  animation: moveRight 0.6s ease-in-out 0.2s backwards;
+
 
 }
 
@@ -16,9 +17,17 @@
 }
 
 .cardImage {
-  background-image: url("./assets/temp.png");
+ 
   min-height: 150px;
   min-width: 100%;
+}
+
+.bg{
+  background-image: url("./assets/temp.png");
+  -moz-background-image: url("./assets/temp.png");
+  min-height: 150px;
+  min-width: 100%;
+
 }
 .cardEntry {
   padding: 19px 19px 5px 19px;
@@ -90,6 +99,8 @@ button {
   justify-content: center;
   padding-left: 26px;
   padding-right: 26px;
+
+
 }
 .navigation {
   display: flex;
@@ -117,8 +128,32 @@ button {
 
   margin: auto;
   background-color: #f6f6f6;
-  height: 100%;
+  height: 100vh;
+  
+   
 }
+
+/* img {
+  opacity: 0;
+  transition: opacity 0.6s ease;
+}
+
+.loaded img {
+  opacity: 1;
+} */
+
+
+@keyframes moveRight{
+  0% { 
+      transform: translateX(-40px); 
+      opacity: 0;
+  }
+  100% { 
+      transform: translateX(0px);  
+      opacity: 1;
+  }
+}
+
 
 @media only screen and (max-width: 1000px) {
 
@@ -132,12 +167,15 @@ button {
   }
   .deck{
     background-color: #f6f6f6;
+    animation: moveRight 0.6s ease-in-out 0.2s backwards;
+
 
 
   }
   .card{
     margin-left: 0px;
     margin-top: 0px;
+
   }
   .firstCard{
     margin-top: 26px;
