--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,6 @@ background-image: url('./assets/empty.png');
 .cardEntry {
   padding: 19px 19px 5px 19px;
   margin-bottom:19px; 
-  height: auto;
 }
 
 .cardHeading {
@@ -122,6 +121,8 @@ button:focus{
 }
 .firstCard {
   margin-left: 0;
+  border: 2px solid #e1e1e1;
+
 }
 
 .canvas {
@@ -153,8 +154,12 @@ button:focus{
   height: 24px;
 }
 .emptyFoot{
-  height: 100%;
-  width: 100%;
+  min-height: 100%;
+  min-width: 100%;
+}
+.emptyFoot>img{
+  max-height: 100%;
+  object-fit: contain;
 }
 
 /* img {
